2002-07-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/mark.ly: 
	* Documentation/user/refman.itely: Re-enable \mark #'() example.

	* lily/parser.yy: Revert to MARK scalar.

2002-07-21  Han-Wen  <hanwen@cs.uu.nl>

	* lily/accidental-placement.cc (stagger_apes): try to arrange accs
	in a C form, with the top accidental closet to the chord.

	* lily/stem.cc (get_default_stem_end_position): don't crash if
	lengths not set.
	(get_default_stem_end_position): idem for stem-shorten.

	* mf/feta-toevallig.mf: enlarge flat bbox.

	* input/regression/lyrics-extender.ly: new file.

	* lily/lyric-extender.cc (brew_molecule): don't add
	right-trim-amount if extender is broken.

	* scripts/ly2dvi.py (global_latex_preamble): bugfix (thanks Werner).

2002-07-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/index.texi: Add pointers to new regression and
	test documents.

	* Documentation/user/converters.itely:
	Documentation/user/invoking.itexi: Some small fixes for uniform
	usage example.

	* input/allfontsize.ly, size*.ly: New files, moved from
	input/regression.
	
	* input/font20.ly, font-body.ly: New files, moved from input/test.
	
	* input/font*.ly: New files, moved from input/test.

	* input/test/*.ly: Remove empty files, fix broken ones.

	* input/test/different-time-signatures.ly: Add FIXME marker;
	comment-out broken code.

	* Documentation/regression-test.tely: Comment-out, add
	obsolete-marker and url to regression-test-dir.

	* input/test/GNUmakefile: 
	* input/regression/GNUmakefile: Add rule for lys-to-tely.py.

	* input/regression/+.ly:
	* input/test/+.ly: New file.

	* input/test/cue-notes.ly: better example

	* Documentation/user/refman.itely (Font selection): font size doco

	* input/mutopia/F.Schubert/standchen.ly: note bugfix

	* lily/stem.cc: rewrite of scoring to give sane results on knee
	beams.

	* lily/beam.cc (set_stem_lengths): extend stems for gapped tremolo
	beams.
	(connect_beams): chop off beaming outside the beam. Fixes problem