@@ -1,5 +1,9 @@
 2002-07-22  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scripts/lilypond-book.py (make_pixmap): Don't use quiet_system,
+	ie, don't redirect PNG output to /dev/null.  Fixes lys-to-tely
+	documents.
+
 	* input/test/mark.ly: 
 	* Documentation/user/refman.itely: Re-enable \mark #'() example.
 
